# newsletter-z2p

./: .gitignore  Cargo.toml
.github/workflows/: general.yml
scripts/: init_db.sh  init_pgadmin.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
